--- a/frontend/admin/dashboard.html
+++ b/frontend/admin/dashboard.html
@@ -1223,28 +1223,28 @@
         }
 
         body[data-fx-mode='hades'] {
-            --mode-accent: rgba(212,84,63,0.92);
-            --mode-accent-soft: rgba(212,84,63,0.28);
-            --hades-soul: rgba(128,102,255,0.30);
-            --hades-ember: rgba(241,109,72,0.32);
-            --hades-ash: rgba(240,224,196,0.26);
-            --hades-iron: rgba(104,36,26,0.56);
+            --mode-accent: rgba(255,142,54,0.94);
+            --mode-accent-soft: rgba(210,70,255,0.30);
+            --hades-soul: rgba(206,78,255,0.34);
+            --hades-ember: rgba(255,130,54,0.36);
+            --hades-ash: rgba(248,230,204,0.30);
+            --hades-iron: rgba(74,18,36,0.64);
             --font-body: var(--font-hades-body);
             --font-display: var(--font-hades-display);
-            --fire-gradient: linear-gradient(135deg, #1a0a0a 0%, #491312 44%, #7e2b2a 100%);
+            --fire-gradient: linear-gradient(135deg, #12050f 0%, #3b0b2e 46%, #ff7b2f 100%);
             background:
-                radial-gradient(1280px circle at 18% -10%, rgba(238,116,81,0.22), transparent 58%),
-                radial-gradient(980px circle at 84% 8%, rgba(121,84,224,0.24), transparent 58%),
-                radial-gradient(760px circle at 52% 14%, rgba(253,214,172,0.10), transparent 60%),
-                linear-gradient(180deg, #090406 0%, #140607 52%, #070307 100%);
+                radial-gradient(1280px circle at 18% -10%, rgba(255,136,64,0.24), transparent 58%),
+                radial-gradient(980px circle at 84% 8%, rgba(198,66,255,0.26), transparent 58%),
+                radial-gradient(760px circle at 52% 14%, rgba(255,220,178,0.12), transparent 60%),
+                linear-gradient(180deg, #09030d 0%, #130515 52%, #050208 100%);
         }
 
         body[data-fx-mode='zeus'] .orbit-ring { stroke: rgba(112,178,255,0.24); }
         body[data-fx-mode='zeus'] .orbit-ring.faint { stroke: rgba(176,220,255,0.14); }
         body[data-fx-mode='helios'] .orbit-ring { stroke: rgba(255,118,74,0.22); }
         body[data-fx-mode='helios'] .orbit-ring.faint { stroke: rgba(255,170,126,0.12); }
-        body[data-fx-mode='hades'] .orbit-ring { stroke: rgba(224,105,74,0.26); }
-        body[data-fx-mode='hades'] .orbit-ring.faint { stroke: rgba(168,132,255,0.14); }
+        body[data-fx-mode='hades'] .orbit-ring { stroke: rgba(255,148,72,0.28); }
+        body[data-fx-mode='hades'] .orbit-ring.faint { stroke: rgba(198,76,255,0.16); }
 
         body[data-fx-mode='zeus'] .dashboard-halo {
             background: radial-gradient(circle at 50% 30%, rgba(72,136,255,0.42), transparent 64%);
@@ -1274,7 +1274,7 @@
         }
 
         body[data-fx-mode='hades'] .dashboard-halo {
-            background: radial-gradient(circle at 50% 30%, rgba(235,108,78,0.32), transparent 62%);
+            background: radial-gradient(circle at 50% 30%, rgba(255,136,64,0.34), transparent 62%);
         }
 
         body[data-fx-mode='hades'] .dashboard-halo::after {
@@ -1285,8 +1285,8 @@
             border-radius: 50%;
             background: repeating-radial-gradient(
                 circle at 50% 50%,
-                rgba(255,186,147,0.14) 0 11px,
-                rgba(143,95,236,0.08) 11px 22px,
+                rgba(255,210,164,0.16) 0 11px,
+                rgba(203,78,255,0.10) 11px 22px,
                 transparent 22px 34px
             );
             mix-blend-mode: screen;
@@ -1303,16 +1303,16 @@
         body[data-fx-mode='hades'] .stat-card,
         body[data-fx-mode='hades'] .behavioral-metric,
         body[data-fx-mode='hades'] .dashboard-header {
-            border-color: rgba(204,96,74,0.46);
+            border-color: rgba(255,130,60,0.44);
             box-shadow:
-                inset 0 0 0 1px rgba(250,227,198,0.05),
-                0 0 28px rgba(108,30,24,0.32);
+                inset 0 0 0 1px rgba(248,229,203,0.06),
+                0 0 28px rgba(84,20,74,0.30);
         }
 
         body[data-fx-mode='hades'] .myth-btn:hover,
         body[data-fx-mode='hades'] .myth-btn.active {
-            color: #fdf1e1;
-            background: linear-gradient(135deg, rgba(58,20,14,0.95), rgba(198,79,59,0.92));
+            color: #fff0db;
+            background: linear-gradient(135deg, rgba(56,14,40,0.95), rgba(255,126,56,0.92));
         }
 
         body[data-fx-mode='hades'] .dashboard-title,
@@ -1320,14 +1320,14 @@
         body[data-fx-mode='hades'] .behavioral-title {
             letter-spacing: 0.10em;
             text-shadow:
-                0 0 14px rgba(246,190,140,0.22),
-                0 0 24px rgba(212,84,63,0.26);
+                0 0 14px rgba(255,204,154,0.24),
+                0 0 24px rgba(212,70,255,0.28);
         }
 
         body[data-fx-mode='hades'] .dashboard-header {
             background:
-                linear-gradient(140deg, rgba(22,8,10,0.94), rgba(54,14,16,0.84) 62%),
-                radial-gradient(580px circle at 50% 4%, rgba(246,132,92,0.16), transparent 60%);
+                linear-gradient(140deg, rgba(18,6,16,0.94), rgba(46,10,40,0.84) 62%),
+                radial-gradient(580px circle at 50% 4%, rgba(255,146,72,0.18), transparent 60%);
             overflow: hidden;
         }
 
@@ -1338,8 +1338,8 @@
             pointer-events: none;
             background: repeating-conic-gradient(
                 from 0deg at 50% 34%,
-                rgba(245,196,154,0.09) 0deg 8deg,
-                rgba(122,90,232,0.06) 8deg 14deg,
+                rgba(255,208,162,0.10) 0deg 8deg,
+                rgba(196,74,255,0.08) 8deg 14deg,
                 transparent 14deg 24deg
             );
             opacity: 0.24;
@@ -1460,14 +1460,14 @@
         }
 
         body[data-fx-mode='hades'] .myth-btn {
-            background: linear-gradient(140deg, rgba(18,8,9,0.92), rgba(44,12,14,0.82));
-            border-color: rgba(214,92,69,0.44);
-            color: rgba(246,228,203,0.86);
-            text-shadow: 0 0 12px rgba(241,109,72,0.24);
+            background: linear-gradient(140deg, rgba(16,6,14,0.92), rgba(42,10,34,0.84));
+            border-color: rgba(255,128,58,0.44);
+            color: rgba(248,229,203,0.88);
+            text-shadow: 0 0 12px rgba(255,134,60,0.26);
         }
 
         body[data-fx-mode='hades'] .myth-btn::before {
-            background: linear-gradient(118deg, transparent 8%, rgba(240,177,121,0.22) 42%, rgba(206,82,62,0.36) 54%, transparent 88%);
+            background: linear-gradient(118deg, transparent 8%, rgba(255,190,122,0.24) 42%, rgba(208,70,255,0.34) 54%, transparent 88%);
         }
 
         body[data-fx-mode='hades'] .myth-btn:hover::after,
@@ -1482,14 +1482,14 @@
         }
 
         body[data-fx-mode='hades'] .chart-container {
-            border-color: rgba(211,90,68,0.42);
+            border-color: rgba(255,124,56,0.42);
             background:
-                linear-gradient(150deg, rgba(18,8,9,0.94), rgba(42,11,13,0.92) 58%),
-                radial-gradient(760px circle at 12% 10%, rgba(244,120,85,0.20), transparent 60%),
-                radial-gradient(720px circle at 88% 0%, rgba(119,92,236,0.16), transparent 64%);
+                linear-gradient(150deg, rgba(14,6,14,0.94), rgba(36,9,34,0.92) 58%),
+                radial-gradient(760px circle at 12% 10%, rgba(255,128,58,0.22), transparent 60%),
+                radial-gradient(720px circle at 88% 0%, rgba(198,70,255,0.18), transparent 64%);
             box-shadow:
-                inset 0 0 0 1px rgba(255,255,255,0.04),
-                0 0 30px rgba(116,32,24,0.36);
+                inset 0 0 0 1px rgba(255,255,255,0.05),
+                0 0 30px rgba(82,18,78,0.34);
             transition: transform 0.26s ease, box-shadow 0.26s ease, border-color 0.26s ease;
         }
 
@@ -1500,44 +1500,44 @@
             pointer-events: none;
             border-radius: inherit;
             background:
-                radial-gradient(circle at 20% 12%, rgba(246,140,96,0.30), transparent 58%),
-                linear-gradient(112deg, transparent 20%, rgba(255,210,165,0.20) 46%, transparent 76%);
+                radial-gradient(circle at 20% 12%, rgba(255,146,72,0.30), transparent 58%),
+                linear-gradient(112deg, transparent 20%, rgba(214,74,255,0.22) 46%, transparent 76%);
             opacity: 0.28;
             animation: abyssChartPulse 4.8s ease-in-out infinite alternate;
         }
 
         body[data-fx-mode='hades'] .chart-container:hover {
             transform: translateY(-3px);
-            border-color: rgba(235,128,97,0.56);
+            border-color: rgba(255,148,76,0.56);
             box-shadow:
                 inset 0 0 0 1px rgba(255,255,255,0.06),
-                0 0 34px rgba(139,42,30,0.44);
+                0 0 34px rgba(118,24,98,0.42);
         }
 
         body[data-fx-mode='hades'] .cvss-gauge-container {
-            border-color: rgba(227,115,82,0.34);
+            border-color: rgba(255,134,64,0.34);
             background:
-                radial-gradient(760px circle at 50% 8%, rgba(246,132,92,0.22), transparent 58%),
-                radial-gradient(560px circle at 50% 88%, rgba(119,92,236,0.18), transparent 58%),
-                linear-gradient(158deg, rgba(20,8,10,0.86), rgba(45,12,15,0.88));
-            box-shadow: inset 0 0 0 1px rgba(249,217,186,0.06), 0 0 28px rgba(118,31,22,0.34);
+                radial-gradient(760px circle at 50% 8%, rgba(255,136,66,0.24), transparent 58%),
+                radial-gradient(560px circle at 50% 88%, rgba(200,72,255,0.20), transparent 58%),
+                linear-gradient(158deg, rgba(16,6,14,0.88), rgba(40,10,34,0.90));
+            box-shadow: inset 0 0 0 1px rgba(248,229,203,0.08), 0 0 28px rgba(86,18,82,0.34);
         }
 
         body[data-fx-mode='hades'] #cvssGauge {
-            filter: drop-shadow(0 0 18px rgba(242,116,79,0.34)) drop-shadow(0 0 30px rgba(129,96,236,0.26));
+            filter: drop-shadow(0 0 18px rgba(255,130,58,0.34)) drop-shadow(0 0 30px rgba(198,70,255,0.28));
         }
 
         body[data-fx-mode='hades'] .cvss-gauge-value {
-            background: linear-gradient(135deg, #f7e7cf 0%, #ee8f68 58%, #8f66f1 100%);
+            background: linear-gradient(135deg, #f8e9d3 0%, #ff9a4c 56%, #d44aff 100%);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 28px rgba(232,102,68,0.34);
+            text-shadow: 0 0 28px rgba(214,74,255,0.34);
         }
 
         body[data-fx-mode='hades'] .cvss-gauge-sub {
-            color: rgba(246,219,191,0.70);
-            text-shadow: 0 0 12px rgba(224,100,72,0.30);
+            color: rgba(248,229,203,0.74);
+            text-shadow: 0 0 12px rgba(255,130,58,0.32);
         }
 
         body[data-fx-mode='zeus'] .cvss-gauge-value {
@@ -2732,7 +2732,20 @@
 
             const payload = {
                 threat_keyword: (attack && (attack.attack_type || attack.cve || attack.owasp)) ? (attack.attack_type || attack.cve || attack.owasp) : '',
-                payload: (attack && attack.attack_type) ? attack.attack_type : '',
+                payload: [
+                    attack && attack.attack_type ? String(attack.attack_type) : '',
+                    attack && attack.cve ? String(attack.cve) : '',
+                    attack && attack.owasp ? String(attack.owasp) : '',
+                ].filter(Boolean).join(' '),
+                attack_type: type,
+                severity: sev,
+                cvss_score: Number.isFinite(cvss) ? cvss : 0,
+                cvss_vector: '',
+                owasp: attack && attack.owasp ? String(attack.owasp) : '',
+                cve: attack && attack.cve ? String(attack.cve) : '',
+                cve_references: attack && attack.cve ? [String(attack.cve)] : [],
+                session_id: sidFull,
+                timestamp: attack && attack.timestamp ? String(attack.timestamp) : '',
                 network_features: Array(11).fill(0),
             };
 
